<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dudu Magic Phone</string>
    <string name="action_settings">Settings</string>
    <string name="do_magic">Do Magic!</string>
    <string name="magic_book">Learn spells from the Book Of Magic</string>
    <string name="create_own">Create your own spell</string>
    <string name="title_activity_create_spell">Create a Spell - Step 1</string>
    <string name="say_spell">Say your spell:</string>
    <string name="spell_type_text">Choose a type of your spell:</string>
    <string name="speaking_spell">Speaking only</string>
    <string name="speakin_drawing">Speaking and drawing</string>
    <string name="speaking_waving">Speaking and rotating</string>
    <string name="speaking_spell_spell">Speaking only Spells</string>
    <string name="speakin_drawing_spell">Speaking and drawing Spells</string>
    <string name="speaking_waving_spell">Speaking and rotating Spells</string>
    <string name="next_btn">Next</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_create_spell_res">Create a Spell - Step 3</string>
    <string name="title_activity_create_spell_draw">Create a Spell - Step 2</string>
    <string name="title_activity_create_spell_move">Create a Spell - Step 2</string>
    <string name="choose_result">Choose a result of your spell:</string>

    <string-array name="results_spinner">
        <item>Switching flashlight on</item>
        <item>Nothing</item>
    </string-array>
    
    <string-array name="axis_mnu">
        <item>X</item>
        <item>Y</item>
        <item>Z</item>
    </string-array>

    <string name="light_times">time(s), for</string>
    <string name="light_breakes">ms each time</string>
    <string name="with">with</string>
    <string name="interceptions">ms interceptions</string>
    <string name="nr1">1</string>
    <string name="nr360">360</string>
    <string name="nr1000">1000</string>
    <string name="try_spell">Try</string>
    <string name="add_spell">Add spell to the \n Book Of Magik</string>
    <string name="title_activity_book_menu">Book of Magic</string>
    <string name="show_spell_name_intro">Incantation of spell: </string>
    <string name="return_str">Return</string>
    <string name="show_spell_type_intro">Type of spell: </string>
    <string name="title_activity_cast_spell">Casting a spell</string>
    <string name="do_it">Do it!</string>
    <string name="cancel">Cancel</string>
    <string name="draw_symbol">Draw your magic symbol:</string>
    <string name="create_rotation_list">Create your list of rotation:</string>
    <string name="reset_str">Reset</string>
    <string name="delete_spell">Delete this spell</string>
    <string name="degrees_around">degrees around</string>
    <string name="axis">axis</string>
    <string name="remove_last_rotation">Remove \nlast rotation</string>
    <string name="add">Add</string>

</resources>
