<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DoMagicMenuActivity"
    android:orientation="vertical"
    android:background="#A9BCF5" >
    
    <Button 
        android:id="@+id/speaking_only_doMnu"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="castSpells"
        android:text="@string/speaking_spell_spell" />
    
    <Button 
        android:id="@+id/speaking_drawing_doMnu"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="castSpells"
        android:text="@string/speakin_drawing_spell" />
    
    <Button 
        android:id="@+id/speaking_waving_doMnu"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="castSpells"
        android:text="@string/speaking_waving_spell" />
    
   

</LinearLayout>
