<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CreateSpellDrawActivity"
    android:background="#E3CEF6" >

    <TextView
        android:id="@+id/draw_symbol_txt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/draw_symbol"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <LinearLayout
        android:id="@+id/draw_field_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/draw_symbol_txt"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        
        android:orientation="vertical" >
    </LinearLayout>
    
    <Button 
        android:id = "@+id/next_btn2"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:text="@string/next_btn" 
        android:onClick="goNext" /> 
        
    <Button 
        android:id = "@+id/reset_paths"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:text="@string/reset_str" 
        android:onClick="resetPaths" /> 
        
   
</RelativeLayout>
