<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ShowSpellActivity"
    android:background="#81F7BE" >

    <TextView
        android:id="@+id/show_spell_name_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_spell_name_intro"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView 
        android:id="@+id/show_spell_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/show_spell_name_intro"
        android:textColor="#0B0B61"
        android:layout_marginLeft="5dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/show_spell_type_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/show_spell_name_intro"
        android:text="@string/show_spell_type_intro"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView 
        android:id="@+id/show_spell_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/show_spell_type_intro"
        android:layout_alignBaseline="@id/show_spell_type_intro"
        android:textColor="#0B0B61"
        android:layout_marginLeft="5dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <RelativeLayout 
        android:id="@+id/move_or_draw_show"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/show_spell_type_intro"
        android:layout_marginTop="20dp" >
        
    </RelativeLayout>
    
    <Button 
        android:id="@+id/try_btn_book"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/try_spell"
        android:onClick="tryToCast" />
    
    <Button 
        android:id="@+id/done_btn_book"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/return_str"
        android:onClick="returnToMenu" />

</RelativeLayout>
