<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".BookMenuActivity"
    android:orientation="vertical"
    android:background="#81F7BE" >
    
    <Button 
        android:id="@+id/speaking_only_book"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="showSpells"
        android:text="@string/speaking_spell_spell" />
    
    <LinearLayout 
        android:id="@+id/speaking_only_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#A9F5D0" >
    </LinearLayout>
    
    <Button 
        android:id="@+id/speaking_drawing_book"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="showSpells"
        android:text="@string/speakin_drawing_spell" />
    
    <LinearLayout 
        android:id="@+id/speaking_drawing_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#A9F5D0" >
    </LinearLayout>
    
    <Button 
        android:id="@+id/speaking_waving_book"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="showSpells"
        android:text="@string/speaking_waving_spell" />
    
    <LinearLayout 
        android:id="@+id/speaking_waving_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#A9F5D0" >
    </LinearLayout>
    
    
    

</LinearLayout>
